relay-general/src/pii/snapshots/relay_general__pii__convert__tests__querystring_as_string_with_partials.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "request": {
    "query_string": [
      [
        "foo",
        "bar"
      ],
      [
        "password",
        ""
      ],
      [
        "baz",
        "bar"
      ]
    ]
  }
}
