relay-general/src/pii/snapshots/relay_general__pii__convert__tests__regression_more_odd_keys.snap
---
source: relay-general/src/pii/convert.rs
expression: pii_config
---
{
  "rules": {},
  "vars": {
    "hashKey": null
  },
  "applications": {
    "($string || $number || $array) && !(debug_meta.** || $frame.filename || $frame.abs_path || $logentry.formatted || $error.value) && !url && !message && !'http.request.url' && !'*url*' && !'*message*' && !'*http.request.url*'": [
      "@common:filter"
    ],
    "**": [
      "@ip:replace"
    ]
  }
}
