relay-general/src/pii/snapshots/relay_general__pii__convert__tests__sanitize_http_body.snap
---
source: relay-general/src/pii/convert.rs
expression: data.value().unwrap().request
---
{
  "data": {
    "email": "zzzz@gmail.com",
    "password": "[Filtered]"
  },
  "inferred_content_type": "application/json",
  "_meta": {
    "data": {
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      }
    }
  }
}
