relay-general/src/pii/snapshots/relay_general__pii__convert__tests__sanitize_url_1.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "foo": "pg://matt:[Filtered]@localhost/1"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              10,
              20
            ]
          ],
          "len": 26
        }
      }
    }
  }
}
