relay-general/src/pii/snapshots/relay_general__pii__convert__tests__sanitize_url_2.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "foo": "foo 'redis://redis:[Filtered]@localhost:6379/0' bar"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              19,
              29
            ]
          ],
          "len": 44
        }
      }
    }
  }
}
