relay-general/src/pii/snapshots/relay_general__pii__convert__tests__sanitize_url_3.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "foo": "'redis://redis:[Filtered]@localhost:6379/0'"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              15,
              25
            ]
          ],
          "len": 36
        }
      }
    }
  }
}
