relay-general/src/pii/snapshots/relay_general__pii__convert__tests__scrub_object.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "request": {
    "url": "https://www.bitumequebec.ca/fr/adhesions/authentication",
    "method": "POST",
    "data": {
      "password": "[Filtered]",
      "profile": {
        "email": "testing@example.com",
        "password": null
      },
      "submit": "Se connecter"
    }
  },
  "_meta": {
    "request": {
      "data": {
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 4
          }
        },
        "profile": {
          "password": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "x"
                ]
              ]
            }
          }
        }
      }
    }
  }
}
