relay-general/src/pii/snapshots/relay_general__pii__convert__tests__sdk_client_ip_stripped.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "sdk": {
    "client_ip": null
  },
  "_meta": {
    "sdk": {
      "client_ip": {
        "": {
          "rem": [
            [
              "@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
