relay-general/src/pii/snapshots/relay_general__pii__convert__tests__sensitive_cookies.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "request": {
    "cookies": [
      [
        "_csrf",
        "[Filtered]"
      ],
      [
        "_iris_csrf",
        "[Filtered]"
      ],
      [
        "csrf_token",
        "[Filtered]"
      ],
      [
        "csrftoken",
        "[Filtered]"
      ],
      [
        "fastcsrf",
        "[Filtered]"
      ],
      [
        "fasthttpsessionid",
        "[Filtered]"
      ],
      [
        "irissessionid",
        "[Filtered]"
      ],
      [
        "mysession",
        "[Filtered]"
      ],
      [
        "phpsessid",
        "[Filtered]"
      ],
      [
        "sentrysid",
        "[Filtered]"
      ],
      [
        "session",
        "[Filtered]"
      ],
      [
        "sessionid",
        "[Filtered]"
      ],
      [
        "su",
        "[Filtered]"
      ],
      [
        "sudo",
        "[Filtered]"
      ],
      [
        "symfony",
        "[Filtered]"
      ],
      [
        "user_session",
        "[Filtered]"
      ],
      [
        "xsrf-token",
        "[Filtered]"
      ]
    ]
  },
  "contexts": {
    "response": {
      "cookies": [
        [
          "_csrf",
          "[Filtered]"
        ],
        [
          "_iris_csrf",
          "[Filtered]"
        ],
        [
          "csrf_token",
          "[Filtered]"
        ],
        [
          "csrftoken",
          "[Filtered]"
        ],
        [
          "fastcsrf",
          "[Filtered]"
        ],
        [
          "fasthttpsessionid",
          "[Filtered]"
        ],
        [
          "irissessionid",
          "[Filtered]"
        ],
        [
          "mysession",
          "[Filtered]"
        ],
        [
          "phpsessid",
          "[Filtered]"
        ],
        [
          "sentrysid",
          "[Filtered]"
        ],
        [
          "session",
          "[Filtered]"
        ],
        [
          "sessionid",
          "[Filtered]"
        ],
        [
          "su",
          "[Filtered]"
        ],
        [
          "sudo",
          "[Filtered]"
        ],
        [
          "symfony",
          "[Filtered]"
        ],
        [
          "user_session",
          "[Filtered]"
        ],
        [
          "xsrf-token",
          "[Filtered]"
        ]
      ],
      "type": "response"
    }
  },
  "_meta": {
    "contexts": {
      "response": {
        "cookies": {
          "0": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 8
              }
            }
          },
          "1": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 13
              }
            }
          },
          "10": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            }
          },
          "11": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "12": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            }
          },
          "13": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 7
              }
            }
          },
          "14": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            }
          },
          "15": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 15
              }
            }
          },
          "16": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 13
              }
            }
          },
          "2": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 13
              }
            }
          },
          "3": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "4": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 11
              }
            }
          },
          "5": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 20
              }
            }
          },
          "6": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 16
              }
            }
          },
          "7": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "8": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "9": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          }
        }
      }
    },
    "request": {
      "cookies": {
        "0": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 8
            }
          }
        },
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 13
            }
          }
        },
        "10": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "11": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "12": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "13": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 7
            }
          }
        },
        "14": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "15": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 15
            }
          }
        },
        "16": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 13
            }
          }
        },
        "2": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 13
            }
          }
        },
        "3": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "4": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 11
            }
          }
        },
        "5": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 20
            }
          }
        },
        "6": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 16
            }
          }
        },
        "7": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "8": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "9": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        }
      }
    }
  }
}
