relay-general/src/pii/snapshots/relay_general__pii__convert__tests__should_have_mysql_pwd_as_a_default_1.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "MYSQL_PWD": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "MYSQL_PWD": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 7
        }
      }
    }
  }
}
