relay-general/src/pii/snapshots/relay_general__pii__convert__tests__should_have_mysql_pwd_as_a_default_2.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "mysql_pwd": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "mysql_pwd": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 7
        }
      }
    }
  }
}
